--- a/dashboard.html
+++ b/dashboard.html
@@ -7,228 +7,58 @@
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />
   <style>
-    * {
-      margin: 0;
-      padding: 0;
-      box-sizing: border-box;
-      font-family: "Poppins", sans-serif;
+    *{margin:0;padding:0;box-sizing:border-box;font-family:"Poppins",sans-serif;}
+    body{
+      background:linear-gradient(135deg,#e3f2fd,#bbdefb);
+      min-height:100vh;
+      padding:20px;
+      color:#2c3e50;
+      display:flex;
+      justify-content:center;
+      align-items:flex-start;
     }
-
-    body {
-      background: linear-gradient(135deg, #e3f2fd, #bbdefb);
-      min-height: 100vh;
-      padding: 20px;
-      color: #2c3e50;
-      display: flex;
-      justify-content: center;
-      align-items: flex-start;
+    .dashboard-container{
+      width:100%;
+      max-width:1200px;
+      background:rgba(255,255,255,0.95);
+      border-radius:25px;
+      box-shadow:0 20px 60px rgba(0,0,0,0.1);
+      backdrop-filter:blur(8px);
+      padding:25px;
+      animation:fadeIn .8s ease-in-out;
     }
-
-    .dashboard-container {
-      width: 100%;
-      max-width: 1200px;
-      background: rgba(255, 255, 255, 0.95);
-      border-radius: 25px;
-      box-shadow: 0 20px 60px rgba(0, 0, 0, 0.1);
-      backdrop-filter: blur(8px);
-      padding: 25px;
-      animation: fadeIn 0.8s ease-in-out;
-    }
-
-    @keyframes fadeIn {
-      from { opacity: 0; transform: translateY(20px); }
-      to { opacity: 1; transform: translateY(0); }
-    }
-
-    /* Header */
-    .dashboard-header {
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-      flex-wrap: wrap;
-      margin-bottom: 25px;
-      padding-bottom: 15px;
-      border-bottom: 2px solid #e3f2fd;
-    }
-
-    .user-info h1 {
-      font-size: 1.8rem;
-      color: #0d47a1;
-      font-weight: 600;
-    }
-
-    .user-info p {
-      color: #546e7a;
-      margin-top: 5px;
-    }
-
-    .logout-btn {
-      background: linear-gradient(135deg, #ef5350, #e53935);
-      color: white;
-      border: none;
-      padding: 10px 25px;
-      border-radius: 12px;
-      font-weight: 600;
-      cursor: pointer;
-      transition: all 0.3s;
-    }
-
-    .logout-btn:hover {
-      transform: scale(1.05);
-      box-shadow: 0 4px 15px rgba(239, 83, 80, 0.4);
-    }
-
-    /* Stats Section */
-    .stats-grid {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(230px, 1fr));
-      gap: 20px;
-      margin-bottom: 35px;
-    }
-
-    .stat-card {
-      background: white;
-      border-radius: 20px;
-      padding: 25px;
-      text-align: center;
-      box-shadow: 0 10px 30px rgba(0, 0, 0, 0.05);
-      transition: all 0.3s ease;
-      position: relative;
-      overflow: hidden;
-    }
-
-    .stat-card::before {
-      content: "";
-      position: absolute;
-      top: 0; left: 0;
-      width: 100%; height: 100%;
-      background: linear-gradient(135deg, rgba(255,255,255,0.2), rgba(0,0,0,0.05));
-      opacity: 0;
-      transition: opacity 0.4s ease;
-    }
-
-    .stat-card:hover::before {
-      opacity: 1;
-    }
-
-    .stat-card:hover {
-      transform: translateY(-5px);
-      box-shadow: 0 15px 35px rgba(0, 0, 0, 0.1);
-    }
-
-    .stat-card h3 {
-      font-size: 1rem;
-      color: #1565c0;
-      margin-bottom: 10px;
-      font-weight: 600;
-    }
-
-    .stat-card .number {
-      font-size: 2.4rem;
-      font-weight: 700;
-      color: #0d47a1;
-    }
-
-    .blue-card { border-top: 5px solid #42a5f5; }
-    .green-card { border-top: 5px solid #66bb6a; }
-    .orange-card { border-top: 5px solid #ffa726; }
-    .purple-card { border-top: 5px solid #ab47bc; }
-
-    /* Sections */
-    .section {
-      background: white;
-      border-radius: 20px;
-      padding: 25px;
-      box-shadow: 0 10px 30px rgba(0, 0, 0, 0.05);
-      transition: all 0.3s ease;
-    }
-
-    .section-header {
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-      margin-bottom: 15px;
-    }
-
-    .section-header h3 {
-      display: flex;
-      align-items: center;
-      gap: 10px;
-      font-size: 1.3rem;
-      color: #0d47a1;
-    }
-
-    .refresh-btn {
-      background: linear-gradient(135deg, #43a047, #2e7d32);
-      color: white;
-      border: none;
-      padding: 8px 18px;
-      border-radius: 10px;
-      cursor: pointer;
-      transition: all 0.3s;
-      font-weight: 500;
-    }
-
-    .refresh-btn:hover {
-      transform: scale(1.05);
-      box-shadow: 0 4px 12px rgba(67, 160, 71, 0.4);
-    }
-
-    /* Payment Table */
-    .table-responsive {
-      overflow-x: auto;
-    }
-
-    table {
-      width: 100%;
-      border-collapse: collapse;
-      margin-top: 10px;
-      font-size: 0.9rem;
-    }
-
-    th, td {
-      padding: 12px 15px;
-      border-bottom: 1px solid #e0e0e0;
-      text-align: left;
-    }
-
-    th {
-      background: #bbdefb;
-      color: #0d47a1;
-      font-weight: 600;
-      position: sticky;
-      top: 0;
-      z-index: 1;
-    }
-
-    tr:hover {
-      background: #e3f2fd;
-    }
-
-    .status-badge {
-      padding: 5px 10px;
-      border-radius: 20px;
-      font-weight: 600;
-      font-size: 0.8rem;
-    }
-
-    .paid { background: #c8e6c9; color: #2e7d32; }
-    .pending { background: #ffe0b2; color: #ef6c00; }
-
-    @media (max-width: 768px) {
-      .dashboard-header {
-        flex-direction: column;
-        text-align: center;
-        gap: 10px;
-      }
-      .section-header {
-        flex-direction: column;
-        align-items: flex-start;
-        gap: 10px;
-      }
-      .dashboard-container {
-        padding: 15px;
-      }
+    @keyframes fadeIn{from{opacity:0;transform:translateY(20px);}to{opacity:1;transform:translateY(0);}}
+    .dashboard-header{display:flex;justify-content:space-between;align-items:center;flex-wrap:wrap;margin-bottom:25px;padding-bottom:15px;border-bottom:2px solid #e3f2fd;}
+    .user-info h1{font-size:1.8rem;color:#0d47a1;font-weight:600;}
+    .user-info p{color:#546e7a;margin-top:5px;}
+    .logout-btn{background:linear-gradient(135deg,#ef5350,#e53935);color:#fff;border:none;padding:10px 25px;border-radius:12px;font-weight:600;cursor:pointer;transition:.3s;}
+    .logout-btn:hover{transform:scale(1.05);box-shadow:0 4px 15px rgba(239,83,80,.4);}
+    .stats-grid{display:grid;grid-template-columns:repeat(auto-fit,minmax(230px,1fr));gap:20px;margin-bottom:35px;}
+    .stat-card{background:white;border-radius:20px;padding:25px;text-align:center;box-shadow:0 10px 30px rgba(0,0,0,.05);transition:.3s ease;position:relative;overflow:hidden;}
+    .stat-card:hover{transform:translateY(-5px);box-shadow:0 15px 35px rgba(0,0,0,.1);}
+    .stat-card h3{font-size:1rem;color:#1565c0;margin-bottom:10px;font-weight:600;}
+    .stat-card .number{font-size:2.4rem;font-weight:700;color:#0d47a1;}
+    .blue-card{border-top:5px solid #42a5f5;}
+    .green-card{border-top:5px solid #66bb6a;}
+    .orange-card{border-top:5px solid #ffa726;}
+    .purple-card{border-top:5px solid #ab47bc;}
+    .section{background:white;border-radius:20px;padding:25px;box-shadow:0 10px 30px rgba(0,0,0,.05);transition:.3s;}
+    .section-header{display:flex;justify-content:space-between;align-items:center;margin-bottom:15px;}
+    .section-header h3{display:flex;align-items:center;gap:10px;font-size:1.3rem;color:#0d47a1;}
+    .refresh-btn{background:linear-gradient(135deg,#43a047,#2e7d32);color:white;border:none;padding:8px 18px;border-radius:10px;cursor:pointer;transition:.3s;font-weight:500;}
+    .refresh-btn:hover{transform:scale(1.05);box-shadow:0 4px 12px rgba(67,160,71,.4);}
+    .table-responsive{overflow-x:auto;}
+    table{width:100%;border-collapse:collapse;margin-top:10px;font-size:.9rem;}
+    th,td{padding:12px 15px;border-bottom:1px solid #e0e0e0;text-align:left;}
+    th{background:#bbdefb;color:#0d47a1;font-weight:600;position:sticky;top:0;z-index:1;}
+    tr:hover{background:#e3f2fd;}
+    .status-badge{padding:5px 10px;border-radius:20px;font-weight:600;font-size:.8rem;}
+    .paid{background:#c8e6c9;color:#2e7d32;}
+    .pending{background:#ffe0b2;color:#ef6c00;}
+    @media(max-width:768px){
+      .dashboard-header{flex-direction:column;text-align:center;gap:10px;}
+      .section-header{flex-direction:column;align-items:flex-start;gap:10px;}
+      .dashboard-container{padding:15px;}
     }
   </style>
 </head>
@@ -244,27 +74,13 @@
       </button>
     </div>
 
-    <!-- Stats Section -->
     <div class="stats-grid">
-      <div class="stat-card blue-card">
-        <h3>Total Payments</h3>
-        <div class="number" id="totalPayments">0</div>
-      </div>
-      <div class="stat-card green-card">
-        <h3>Paid Payments</h3>
-        <div class="number" id="paidPayments">0</div>
-      </div>
-      <div class="stat-card orange-card">
-        <h3>Pending Payments</h3>
-        <div class="number" id="pendingPayments">0</div>
-      </div>
-      <div class="stat-card purple-card">
-        <h3>Total Paid Amount (Tk)</h3>
-        <div class="number" id="totalAmount">0</div>
-      </div>
+      <div class="stat-card blue-card"><h3>Total Payments</h3><div class="number" id="totalPayments">0</div></div>
+      <div class="stat-card green-card"><h3>Paid Payments</h3><div class="number" id="paidPayments">0</div></div>
+      <div class="stat-card orange-card"><h3>Pending Payments</h3><div class="number" id="pendingPayments">0</div></div>
+      <div class="stat-card purple-card"><h3>Total Paid Amount (Tk)</h3><div class="number" id="totalAmount">0</div></div>
     </div>
 
-    <!-- Payment History Section -->
     <div class="section">
       <div class="section-header">
         <h3><i class="fas fa-history"></i> Payment History</h3>
@@ -295,14 +111,17 @@
     async function loadUserPayments() {
       const container = document.getElementById("paymentStatus");
       container.innerHTML = `<p><i class="fas fa-spinner fa-spin"></i> Refreshing payment data...</p>`;
+
       try {
+        const formData = new FormData();
+        formData.append("action", "get_payments");
+        formData.append("memberId", currentUser.memberId);
+
         const response = await fetch(SCRIPT_URL, {
           method: "POST",
-          body: new URLSearchParams({
-            action: "get_payments",
-            memberId: currentUser.memberId,
-          }),
+          body: formData
         });
+
         const result = await response.json();
         if (result.result === "success") {
           displayPayments(result.payments);
@@ -310,7 +129,8 @@
         } else {
           container.innerHTML = "<p>Error loading data.</p>";
         }
-      } catch (err) {
+      } catch (error) {
+        console.error(error);
         container.innerHTML = "<p>Network error. Try again.</p>";
       }
     }
@@ -343,7 +163,6 @@
       const paid = payments.filter(p => p.Status.toLowerCase() === "paid").length;
       const pending = payments.filter(p => p.Status.toLowerCase() === "pending").length;
       const totalAmount = payments.reduce((sum, p) => sum + (parseFloat(p.Amount) || 0), 0);
-
       document.getElementById("totalPayments").textContent = total;
       document.getElementById("paidPayments").textContent = paid;
       document.getElementById("pendingPayments").textContent = pending;
