--- a/dashboard.html
+++ b/dashboard.html
@@ -15,132 +15,112 @@
     }
 
     body {
-      background: linear-gradient(135deg, #e3f2fd, #bbdefb);
+      background: linear-gradient(135deg, #e3f2fd, #90caf9);
       min-height: 100vh;
       padding: 20px;
       color: #2c3e50;
-      display: flex;
-      justify-content: center;
-      align-items: flex-start;
+      transition: all 0.3s ease;
     }
 
     .dashboard-container {
-      width: 100%;
       max-width: 1200px;
-      background: rgba(255, 255, 255, 0.95);
-      border-radius: 25px;
-      box-shadow: 0 20px 60px rgba(0, 0, 0, 0.1);
-      backdrop-filter: blur(8px);
-      padding: 25px;
-      animation: fadeIn 0.8s ease-in-out;
-    }
-
-    @keyframes fadeIn {
-      from { opacity: 0; transform: translateY(20px); }
-      to { opacity: 1; transform: translateY(0); }
+      margin: 0 auto;
     }
 
     /* Header */
     .dashboard-header {
+      background: white;
+      border-radius: 20px;
+      padding: 25px;
+      margin-bottom: 25px;
+      box-shadow: 0 10px 25px rgba(0, 0, 0, 0.1);
       display: flex;
       justify-content: space-between;
       align-items: center;
       flex-wrap: wrap;
-      margin-bottom: 25px;
-      padding-bottom: 15px;
-      border-bottom: 2px solid #e3f2fd;
+      transition: all 0.3s ease;
+    }
+
+    .dashboard-header:hover {
+      transform: translateY(-3px);
+      box-shadow: 0 12px 30px rgba(0, 0, 0, 0.15);
     }
 
     .user-info h1 {
-      font-size: 1.8rem;
+      font-size: 1.6rem;
       color: #0d47a1;
-      font-weight: 600;
     }
 
     .user-info p {
       color: #546e7a;
-      margin-top: 5px;
     }
 
     .logout-btn {
-      background: linear-gradient(135deg, #ef5350, #e53935);
+      background: #ef5350;
       color: white;
       border: none;
       padding: 10px 25px;
-      border-radius: 12px;
+      border-radius: 10px;
       font-weight: 600;
       cursor: pointer;
       transition: all 0.3s;
     }
 
     .logout-btn:hover {
+      background: #c62828;
       transform: scale(1.05);
-      box-shadow: 0 4px 15px rgba(239, 83, 80, 0.4);
     }
 
     /* Stats Section */
     .stats-grid {
       display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(230px, 1fr));
+      grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
       gap: 20px;
-      margin-bottom: 35px;
+      margin-bottom: 30px;
     }
 
     .stat-card {
       background: white;
       border-radius: 20px;
-      padding: 25px;
+      padding: 20px;
       text-align: center;
-      box-shadow: 0 10px 30px rgba(0, 0, 0, 0.05);
+      box-shadow: 0 8px 20px rgba(0, 0, 0, 0.1);
       transition: all 0.3s ease;
-      position: relative;
-      overflow: hidden;
-    }
-
-    .stat-card::before {
-      content: "";
-      position: absolute;
-      top: 0; left: 0;
-      width: 100%; height: 100%;
-      background: linear-gradient(135deg, rgba(255,255,255,0.2), rgba(0,0,0,0.05));
-      opacity: 0;
-      transition: opacity 0.4s ease;
-    }
-
-    .stat-card:hover::before {
-      opacity: 1;
     }
 
     .stat-card:hover {
       transform: translateY(-5px);
-      box-shadow: 0 15px 35px rgba(0, 0, 0, 0.1);
+      box-shadow: 0 12px 25px rgba(0, 0, 0, 0.15);
     }
 
     .stat-card h3 {
       font-size: 1rem;
-      color: #1565c0;
       margin-bottom: 10px;
-      font-weight: 600;
     }
 
     .stat-card .number {
-      font-size: 2.4rem;
+      font-size: 2rem;
       font-weight: 700;
-      color: #0d47a1;
     }
 
-    .blue-card { border-top: 5px solid #42a5f5; }
-    .green-card { border-top: 5px solid #66bb6a; }
-    .orange-card { border-top: 5px solid #ffa726; }
-    .purple-card { border-top: 5px solid #ab47bc; }
+    .blue-card { border-left: 6px solid #42a5f5; }
+    .green-card { border-left: 6px solid #66bb6a; }
+    .orange-card { border-left: 6px solid #ffa726; }
+    .purple-card { border-left: 6px solid #ab47bc; }
 
     /* Sections */
     .section {
       background: white;
       border-radius: 20px;
       padding: 25px;
-      box-shadow: 0 10px 30px rgba(0, 0, 0, 0.05);
+      box-shadow: 0 8px 25px rgba(0, 0, 0, 0.1);
+      margin-bottom: 30px;
       transition: all 0.3s ease;
+    }
+
+    .section:hover {
+      transform: translateY(-3px);
+      box-shadow: 0 12px 30px rgba(0, 0, 0, 0.15);
     }
 
     .section-header {
@@ -154,24 +134,23 @@
       display: flex;
       align-items: center;
       gap: 10px;
-      font-size: 1.3rem;
+      font-size: 1.2rem;
       color: #0d47a1;
     }
 
     .refresh-btn {
-      background: linear-gradient(135deg, #43a047, #2e7d32);
+      background: #43a047;
       color: white;
       border: none;
-      padding: 8px 18px;
-      border-radius: 10px;
+      padding: 8px 15px;
+      border-radius: 8px;
       cursor: pointer;
       transition: all 0.3s;
-      font-weight: 500;
     }
 
     .refresh-btn:hover {
+      background: #2e7d32;
       transform: scale(1.05);
-      box-shadow: 0 4px 12px rgba(67, 160, 71, 0.4);
     }
 
     /* Payment Table */
@@ -183,26 +162,24 @@
       width: 100%;
       border-collapse: collapse;
       margin-top: 10px;
-      font-size: 0.9rem;
     }
 
     th, td {
       padding: 12px 15px;
       border-bottom: 1px solid #e0e0e0;
       text-align: left;
+      font-size: 0.9rem;
     }
 
     th {
-      background: #bbdefb;
+      background: #90caf9;
       color: #0d47a1;
-      font-weight: 600;
       position: sticky;
       top: 0;
-      z-index: 1;
     }
 
     tr:hover {
-      background: #e3f2fd;
+      background: #f1f8e9;
     }
 
     .status-badge {
@@ -223,11 +200,8 @@
       }
       .section-header {
         flex-direction: column;
-        align-items: flex-start;
         gap: 10px;
-      }
-      .dashboard-container {
-        padding: 15px;
+        align-items: flex-start;
       }
     }
   </style>
